feat: More friendly user interface.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(taskgen)
 
 set(CMAKE_CXX_STANDARD 17)
 include_directories(include)
+link_libraries(pthread)
 add_executable(taskgen main.cpp)
